--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,8 @@
 
 en:
   hello: "Hello world"
+  actual_locale: "English International"
+  links:
+    edit: "Edit"
+    show: "Show"
+    delete: "Delete"
