--- a/config/locales/pt-BR_models.yml
+++ b/config/locales/pt-BR_models.yml
@@ -1,4 +1,4 @@
-pt-BR:
+'pt-BR':
   activerecord:
     models:
       coin:
@@ -6,15 +6,15 @@ pt-BR:
         other: Moedas
       mining_type:
         one: Tipo de Mineração
-        other: Tipos de Minerações
+        other: Tipos de Mineração
     attributes:
       coin:
         id: Código
         description: Descrição
         acronym: Sigla
-        url_image: Url da Imagem
+        url_image: URL da Imagem
         mining_type: Tipo de Mineração
-        mining_type_id: Tipo de mineração
+        mining_type_id: Tipo de Mineração
         updated_at: Atualizado em
         created_at: Criado em
       mining_type:
